# Best-Wines-EU

./: .gitignore  README.md  app.py  folium_map.html  main.ipynb  main1.py  mapa_melhores_vinhos_UE.html  pyproject.toml  requirements.txt
