[project]
name = "projeto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "streamlit<=1.51.0",
    "plotly<=6.5.0",
]
