[project]
name = "projeto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
    "plotly<=6.5.2",
    "papermill>=2.6.0",
]

[dependency-groups]
dev = [
    "streamlit-jupyter>=0.3.1",
]
